--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/scripts/bg.js"></script>
-<iframe id="frame" src="home.html" style="width: 100%; height: 100%></iframe>
+<iframe id="frame" src="home.html" style="width: 100%; height: 100%;"></iframe>
 <script>
   //document.getElementById('xb').click();
 	
