--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
     }
 </script>
 <div class="title">
-    <h1 id="title1">DM Unblocker</h1>
+    <h1 id="title1">CharUnblock</h1>
 </div>
 
 <form class="searchbox" id="searchbox">
