--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
         position:absolute;
         left:0px;
         opacity:1;
-        display:block;
+        display:none;
         top:0px;
         width:100%;
         z-index:100;
