--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
 <script src="/error.js" defer></script>
 
 <div id="black" class="black"></div>
-<img src="/img/loading.gif" id="loadimg" class="loadimg"/>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -35,7 +34,7 @@
 
 <form class="searchbox" id="searchbox">
     <input id="searchengine" value="" type="hidden"/>
-    <input class="search" id="search" placeholder='Search the web freely' type='text'/>
+    <center><input class="search" id="search" placeholder='Search the web freely' type='text'/></center>
 </form>
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
