--- a/home.html
+++ b/home.html
@@ -55,10 +55,9 @@
     position: absolute;
     width: 100%;
     height: 100px;
-    top:19%;
     float: center;
     text-shadow: 3px 6px 2px #c4c4c4;
-    align: center;
+    aign: center;
     text-align: center;
     color: #FFFFFF;
     }
