--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
        })();
     }
     if (title2==null || title2==undefined || title2==""){
-        title2="DM Unbl0cker";
+        title2="CharUnblock";
         document.cookie="title2="+title2+"; expires=Thu, 18 Dec 9013 12:00:00 UTC; path=/";
         document.title=title2;
     }
