--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<body>
 <script src="/uv/uv.bundle.js" defer></script>
 <script src="/uv/uv.config.js" defer></script>
 <script src="/register-sw.js" defer></script>
@@ -50,6 +51,10 @@
 </form>
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
+    .body {
+        background-color: white;
+        color: black;
+    }
     .black{
         position:absolute;
         left:0px;
@@ -236,3 +241,4 @@ function isUrl(val = '') {
 
     }
 </script>
+</body>
