--- a/home.html
+++ b/home.html
@@ -8,7 +8,6 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="/scripts/bg.js"></script>
 
 
 
@@ -75,7 +74,7 @@
     text-shadow: 3px 6px 2px #c4c4c4;
     aign: center;
     text-align: center;
-    color: #FFFFFF;
+    color: black;
     }
     ::placeholder {
     margin: auto;
