--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function credits(){
             var favicon=get_cookie("favicon");
 
             if (favicon==null || favicon==undefined || favicon==""){
-                favicon="/img/logo.png";
+                favicon="favicon.ico";
                 document.cookie="favicon="+favicon+"; expires=Thu, 18 Dec 9013 12:00:00 UTC; path=/";
                 (function() {
                    var link=parent.document.createElement('link');
