--- a/home.html
+++ b/home.html
@@ -51,8 +51,8 @@
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
     body {
-        background-color: white;
-        color: black;
+        background-color: 1a1a1a;
+        color: gray;
     }
     .black{
         position:absolute;
