--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
     text-shadow: 3px 6px 2px #c4c4c4;
     aign: center;
     text-align: center;
-    color: black;
+    color: gray;
     }
     ::placeholder {
     margin: auto;
