--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
 
 <form class="searchbox" id="searchbox">
     <input id="searchengine" value="" type="hidden"/>
-    <center><input class="search" id="search" style="border-radius: 30px; width: 300px; height: 40px;" placeholder='Search the web freely' type='text'/></center>
+    <center><input id="search" style="border-radius: 30px; width: 300px; height: 40px;" placeholder='Search the web freely' type='text'/></center>
 </form>
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
