--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
     width: 100%;
     height: 100px;
     float: center;
-    text-shadow: 3px 6px 2px #c4c4c4;
+    text-shadow: 3px 6px 2px black;
     aign: center;
     text-align: center;
     color: white;
