--- a/home.html
+++ b/home.html
@@ -238,4 +238,4 @@ function isUrl(val = '') {
     }
 </script>
 </body>
-<button onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')" style="align-items: center; background-color: black; width:100%; bottom: 0px; position: fixed;">Discord</button>
+<button onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')" style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed;">Discord</button>
