--- a/home.html
+++ b/home.html
@@ -253,5 +253,5 @@ function aboutblank() {
 </body>
 <div style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white;">
 <a onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')">Discord</a>
-<a onclick="aboutblank();>Discord</a>
+<a onclick="aboutblank();>Open About Blank Cloaking</a>
 </div>
