--- a/home.html
+++ b/home.html
@@ -251,7 +251,7 @@ function aboutblank() {
         }
 </script>
 </body>
-<div style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white;">
-<a onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')">Discord</a>
-<a onclick="aboutblank();">Open About Blank Cloaking</a>
+<div style="align-items: center; background-color: #4d4d4d; padding: 20px; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white;">
+<button onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')">Discord</button>
+<button onclick="aboutblank();">Open About Blank Cloaking</button>
 </div>
