--- a/home.html
+++ b/home.html
@@ -251,7 +251,7 @@ function aboutblank() {
         }
 </script>
 </body>
-<div style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white;">
+<div style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white; border-radius: 30px;">
 <button onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')">Discord</button>
 <button onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</button>
 </div>
