--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="/scripts/index.js" defer></script>
 <script src="/error.js" defer></script>
 <script src="/scripts/load.js" defer></script>
-
+<script type='text/javascript' src='//pl22915159.profitablegatecpm.com/42/83/a7/4283a72346ebb5fbabc4db3b5a2ba666.js'></script>
 <meta name="description" content="An amazing unblocker with many features including many themes, games, apps, and other features!" />
 <style>
 
