--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <script src="/scripts/index.js" defer></script>
 <script src="/error.js" defer></script>
 <script src="/scripts/load.js" defer></script>
-<script type='text/javascript' src='//pl22915159.profitablegatecpm.com/42/83/a7/4283a72346ebb5fbabc4db3b5a2ba666.js'></script>
 <meta name="description" content="An amazing unblocker with many features including many themes, games, apps, and other features!" />
 <style>
 
@@ -20,5 +19,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/scripts/bg.js"></script>
 <iframe id="frame" src="home.html" style="width: 100%; height: 100%;"></iframe>
-	
-  
+<script type='text/javascript' src='//pl22915159.profitablegatecpm.com/42/83/a7/4283a72346ebb5fbabc4db3b5a2ba666.js'></script>
+</body>
