--- a/games/index.html
+++ b/games/index.html
@@ -1,12 +1,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<div id="particlebox"></div>
-<script src="/scripts/bg.js"></script>
-
-<h1 id="title1" class="title1">games</h1> 
-
-<div id="black" class="black"></div> <img src="/img/loading.gif" id="loadimg" class="loadimg"/> <style> @keyframes fadeout{ 0%{ opacity:1; pointer-events: none;} 100%{ opacity:0; display:none; }} .black{ position:absolute; left:0px; opacity:1; display:block; top:0px; width:100%; z-index:999999999999999999999999999999999999999999999; height:100%; } .loadimg{ position:absolute; opacity:1; display:block; width:125px; z-index:9999999999999999999999999999999999999999999999; height:125px; top:50%; left:50%; transform:translate(-50%, -50%); } </style> <script> function fade(){ document.getElementById("loadimg").style.animation="linear 1.5s 1 running fadeout"; document.getElementById("loadimg").addEventListener("animationend", () => { document.getElementById("black").style.animation="linear 1.5s 1 running fadeout"; document.getElementById("black").addEventListener("animationend", () => { document.getElementById("black").remove(); }); document.getElementById("loadimg").remove(); }); } setTimeout(fade,1200); </script> 
+<h1 id="title1" class="title1">Games</h1>  
 <input type="text" placeholder="Search..." id="searchbar">
 <div class="buttons" align="center" id="buttons"> 
   <button class="games" data-sort="" onclick="fortnite();">Fortnite Mobile</button>
@@ -50,9 +45,6 @@
   <button class="games" data-sort="" onclick="yohoho();">Yohoho.io</button>
   <button class="games" data-sort="" onclick="ltf2();">Learn to Fly 2</button>
 </div>
-<a href="https://github.com/3kh0">
-  <h4 class="credits">credit to 3kh0 for some (a lot) of the games</h4>
-</a>
 <style>
   #searchbar{
     position: absolute;
