--- a/games/index.html
+++ b/games/index.html
@@ -1,8 +1,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <h1 id="title1" class="title1">Games</h1>  
-<input type="text" placeholder="Search..." id="searchbar">
+<input type="text" placeholder="Search" id="searchbar">
 <div class="buttons" align="center" id="buttons"> 
   <button class="games" data-sort="" onclick="fortnite();">Fortnite Mobile</button>
   <button class="games" data-sort="" onclick="paperio();">Paper.io</button>
