--- a/home.html
+++ b/home.html
@@ -240,5 +240,5 @@ function isUrl(val = '') {
 </script>
 </body>
 <div style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white; border-radius: 30px;">
-<button onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')">Discord</button>
+<img src="/img/discord.png" onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')" alt="discord">
 </div>
