--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
       (function () {var url = document.URL; var urlObj = new window.URL(window.location.href); win = window.open(); win.document.body.style.margin = "0"; win.document.body.style.height = "100vh"; var iframe = win.document.createElement("iframe"); iframe.style.border = "none"; iframe.style.width = "100%"; iframe.style.height = "100%"; iframe.style.margin = "0"; iframe.referrerpolicy = "no-referrer"; iframe.allow = "fullscreen"; iframe.src = url.toString(); win.document.body.appendChild(iframe);window.location.href="https://google.com";})();
     }
 </script>
-<p style="position: absoulute;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
+<p style="float: left; position: absoulute;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
 <p style="float: right; position: absoulute;" onclick='window.open("./games", "_self")'>Games</p>
 <br>
 <br>
