--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     }
 </script>
 <p style="float: left;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
-<p style="float: right;" onclick='window.open("./games", "_self")'>Games</p>
+<p style="float: left;" onclick='window.open("./games", "_self")'>Games</p>
 <br>
 <br>
 <br>
