--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 <br>
 <br>
 <div class="title">
-    <h1 id="title1">CharUnblock</h1>
+    <h1 id="title1">C-Unblock</h1>
 </div>
 
 <form class="searchbox" id="searchbox">
@@ -112,7 +112,7 @@
                })();
             }
             if (title2==null || title2==undefined || title2==""){
-                title2="CharUnblock";
+                title2="C-Unblock";
                 document.cookie="title2="+title2+"; expires=Thu, 18 Dec 9013 12:00:00 UTC; path=/";
                 parent.document.title=title2;
             }
@@ -155,7 +155,7 @@
        })();
     }
     if (title2==null || title2==undefined || title2==""){
-        title2="CharUnblock";
+        title2="C-Unblock";
         document.cookie="title2="+title2+"; expires=Thu, 18 Dec 9013 12:00:00 UTC; path=/";
         document.title=title2;
     }
@@ -215,7 +215,7 @@
        })();
     }
     if (title2==null || title2==undefined || title2==""){
-        title2="CharUnblock";
+        title2="C-Unblock";
         document.cookie="title2="+title2+"; expires=Thu, 18 Dec 9013 12:00:00 UTC; path=/";
         document.title=title2;
     }
