--- a/games/index.html
+++ b/games/index.html
@@ -1,3 +1,11 @@
+
+<style>
+body {
+  background-color: #1a1a1a;
+  color: #4d4d4d;
+}
+</style>
+<body>
 <br>
 <br>
 <br>
@@ -13,3 +21,4 @@
 <br>
 <center><h1>GAMES</h1></center>
 <center><h2>we got none yet still in dev</h2></center>
+</body>
