--- a/games/index.html
+++ b/games/index.html
@@ -1,8 +1,8 @@
 
 <style>
 body {
-  background-color: #1a1a1a;
-  color: #4d4d4d;
+  background-color: #262626;
+  color: gray;
 }
 </style>
 <body>
