--- a/home.html
+++ b/home.html
@@ -10,7 +10,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 
-
 <script>
     var link=document.querySelector("link[rel*='icon']") || document.createElement('link');
     link.type='image/x-icon';
@@ -25,6 +24,8 @@
       (function () {var url = document.URL; var urlObj = new window.URL(window.location.href); win = window.open(); win.document.body.style.margin = "0"; win.document.body.style.height = "100vh"; var iframe = win.document.createElement("iframe"); iframe.style.border = "none"; iframe.style.width = "100%"; iframe.style.height = "100%"; iframe.style.margin = "0"; iframe.referrerpolicy = "no-referrer"; iframe.allow = "fullscreen"; iframe.src = url.toString(); win.document.body.appendChild(iframe);window.location.href="https://google.com";})();
     }
 </script>
+<p style="float: left; padding: 20px;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
+<p style="float: left; padding: 20px;" onclick='window.open("./games", "_self")'>Games</p>
 <br>
 <br>
 <br>
@@ -238,3 +239,6 @@ function isUrl(val = '') {
     }
 </script>
 </body>
+<div style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white; border-radius: 30px; padding: 10px;">
+<img src="/img/discor.png" height="30px" width="30px" onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')" alt="discord">
+</div>
