--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
 </script>
 <p style="float: left; padding: 20px;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
 <p style="float: left; padding: 20px;" onclick='window.open("./games", "_self")'>Games</p>
+<p style="float: left; padding: 20px;" onclick='document.body.innerHTML = "<iframe src="https://discor.pages.dev/" height="100%" width="100%"></iframe>'>WidgetBot</p>
 <br>
 <br>
 <br>
