--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/scripts/bg.js"></script>
 <iframe id="frame" src="home.html" style="width: 100%; height: 100%;"></iframe>
-<script type='text/javascript' src='//pl22915159.profitablegatecpm.com/42/83/a7/4283a72346ebb5fbabc4db3b5a2ba666.js'></script>
+<script type='text/javascript' src='//continueallergic.com/42/83/a7/4283a72346ebb5fbabc4db3b5a2ba666.js'></script>
 </body>
