--- a/home.html
+++ b/home.html
@@ -8,7 +8,9 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 
 <script>
     var link=document.querySelector("link[rel*='icon']") || document.createElement('link');
@@ -51,7 +53,6 @@
     <center><input id="search" style="border-radius: 30px; width: 300px; height: 40px;" placeholder='Search the web freely' type='text'/></center>
 </form>
 <style>
-    @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
     body {
         background-color: #262626;
         color: gray;
