--- a/home.html
+++ b/home.html
@@ -26,9 +26,9 @@
       (function () {var url = document.URL; var urlObj = new window.URL(window.location.href); win = window.open(); win.document.body.style.margin = "0"; win.document.body.style.height = "100vh"; var iframe = win.document.createElement("iframe"); iframe.style.border = "none"; iframe.style.width = "100%"; iframe.style.height = "100%"; iframe.style.margin = "0"; iframe.referrerpolicy = "no-referrer"; iframe.allow = "fullscreen"; iframe.src = url.toString(); win.document.body.appendChild(iframe);window.location.href="https://google.com";})();
     }
 </script>
-<p style="float: left; padding: 20px;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
-<p style="float: left; padding: 20px;" onclick='window.open("./games", "_self")'>Games</p>
-<p style="float: left; padding: 20px;" onclick='document.body.innerHTML = `<iframe src="https://discor.pages.dev/" height="100%" width="100%"></iframe>`'>WidgetBot</p>
+<p style="float: left; font-family: 'Oxygen', sans-serif; padding: 20px;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
+<p style="float: left; font-family: 'Oxygen', sans-serif; padding: 20px;" onclick='window.open("./games", "_self")'>Games</p>
+<p style="float: left; font-family: 'Oxygen', sans-serif; padding: 20px;" onclick='document.body.innerHTML = `<iframe src="https://discor.pages.dev/" height="100%" width="100%"></iframe>`'>WidgetBot</p>
 <br>
 <br>
 <br>
@@ -71,6 +71,7 @@
     border: none;
     }
     .title{
+    font-family: 'Oxygen', sans-serif; 
     width: 100%;
     height: 100px;
     float: center;
