--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 
 <script>
     var link=document.querySelector("link[rel*='icon']") || document.createElement('link');
@@ -71,7 +71,7 @@
     border: none;
     }
     .title{
-    font-family: 'Oxygen', sans-serif; 
+    font-family: 'Bungee', sans-serif; 
     width: 100%;
     height: 100px;
     float: center;
