--- a/games/index.html
+++ b/games/index.html
@@ -13,12 +13,11 @@ body {
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <center><h1>GAMES</h1></center>
-<center><h2>we got none yet still in dev</h2></center>
+<center>
+  <div>
+  <img src="img/bitlife.jpeg" width="100" height="100">
+  <p style="background-color: gray;">Bitlife</p>
+  </div>
+</center>
 </body>
