--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@ body {
 <center>
   <div>
   <img src="img/bitlife.jpeg" width="100" height="100">
-  <p style="background-color: gray;">Bitlife</p>
+  <p style="background-color: gray; color: black;" width="100">Bitlife</p>
   </div>
 </center>
 </body>
