--- a/games/index.html
+++ b/games/index.html
@@ -16,8 +16,12 @@ body {
 <center><h1>GAMES</h1></center>
 <center>
   <div>
-  <img src="img/bitlife.jpeg" width="100" height="100">
-  <p style="background-color: gray; color: black;" width="100">Bitlife</p>
+  <img src="img/bitlife.jpeg" width="100" height="100" onclick="bitlife();">
   </div>
 </center>
 </body>
+<script>
+function bitlife() {
+  window.open('/games/bitlife', '_self')
+}
+</script>
