--- a/games/index.html
+++ b/games/index.html
@@ -17,11 +17,15 @@ body {
 <center>
   <div>
   <img src="img/bitlife.jpeg" width="100" height="100" onclick="bitlife();">
+  <img src="img/cookie.png" width="100" height="100" onclick="cc();">
   </div>
 </center>
 </body>
 <script>
 function bitlife() {
   window.open('/games/bitlife', '_self')
+}
+function cc() {
+  window.open('/games/cc', '_self')
 }
 </script>
