--- a/games/cc/index.html
+++ b/games/cc/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://cclicker.pages.dev/" style="width: 100px; height: 100px;"></iframe>
+<iframe src="https://cclicker.pages.dev/" style="width: 100%; height: 100%;"></iframe>
