--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@ body {
 <center>
   <div>
   <img src="img/bitlife.jpeg" width="100" height="100" onclick="bitlife();">
-  <img src="img/cookie.png" width="100" height="100" onclick="cc();">
+  <img src="img/cookie.png" width="100" height="100" style="display: none;" onclick="cc();">
   </div>
 </center>
 </body>
