--- a/games/index.html
+++ b/games/index.html
@@ -16,8 +16,8 @@ body {
 <center><h1>GAMES</h1></center>
 <center>
   <div>
-  <img src="img/bitlife.jpeg" width="100" height="100" onclick="bitlife();">
-  <img src="img/cookie.png" width="100" height="100" style="display: none;" onclick="cc();">
+  <img src="/img/bitlife.jpeg" width="100" height="100" onclick="bitlife();">
+  <img src="/img/cookie.png" width="100" height="100" style="display: none;" onclick="cc();">
   </div>
 </center>
 </body>
