--- a/autocloak.html
+++ b/autocloak.html
@@ -1,4 +1,13 @@
 <script>    
-var url = 'https://c-ub.lema.cl/' + '/home.html/';
-new_window = window.open(URL.createObjectURL(new Blob(["<iframe src='" + url + "' width='100%' height='100%'></iframe>"], { type: "text/html" })))
+ var url = window.location.protocol + '//' + window.location.hostname + '/home.html/';
+ var win = window.open();
+ win.document.body.style.margin = '0'; 
+ win.document.body.style.height = '100vh'; 
+ var embed = win.document.createElement('iframe'); 
+ embed.style.border = 'none'; 
+ embed.style.width = '100%'; 
+ embed.style.height = '100%'; 
+ embed.style.margin = '0'; 
+ embed.src = url; 
+ win.document.body.appendChild(embed);
  </script>
