--- a/home.html
+++ b/home.html
@@ -13,6 +13,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 
 <script>
+    function testframe () {
+    try {
+        return window.self !== window.top;
+    } catch (e) {
+        return true;
+    }
+    }
     var link=document.querySelector("link[rel*='icon']") || document.createElement('link');
     link.type='image/x-icon';
     link.rel='shortcut icon';
@@ -25,7 +32,11 @@
     function blank(){
       (function () {var url = document.URL; var urlObj = new window.URL(window.location.href); win = window.open(); win.document.body.style.margin = "0"; win.document.body.style.height = "100vh"; var iframe = win.document.createElement("iframe"); iframe.style.border = "none"; iframe.style.width = "100%"; iframe.style.height = "100%"; iframe.style.margin = "0"; iframe.referrerpolicy = "no-referrer"; iframe.allow = "fullscreen"; iframe.src = url.toString(); win.document.body.appendChild(iframe);window.location.href="https://google.com";})();
     }
+    if testframe() {
+        
+    } else {
     window.open('/autocloak.html/', '_self')
+    }
 </script>
 <p style="float: left; font-family: 'Oxygen', sans-serif; cursor: pointer; padding: 20px;" onclick="var url = window.location.href; var win = window.open(); win.document.body.style.margin = '0'; win.document.body.style.height = '100vh'; var embed = win.document.createElement('iframe'); embed.style.border = 'none'; embed.style.width = '100%'; embed.style.height = '100%'; embed.style.margin = '0'; embed.src = url; win.document.body.appendChild(embed);">Open About Blank Cloaking</p>
 <p style="float: left; font-family: 'Oxygen', sans-serif; cursor: pointer; padding: 20px;" onclick='window.open("./games", "_self")'>Games</p>
