--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 </head>
 <script type='text/javascript' src='//continueallergic.com/42/83/a7/4283a72346ebb5fbabc4db3b5a2ba666.js'></script>
 <body>
-
+<script>
+function testframe () {
+    try {
+        return window.self !== window.top;
+    } catch (e) {
+        return true;
+    }
+}
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/scripts/bg.js"></script>
 <iframe id="frame" src="home.html" style="width: 100%; height: 100%;"></iframe>
