--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@ function testframe () {
         return true;
     }
 }
+if testframe() {
+        
+} else {
+    window.open('/autocloak.html/', '_self')
+}
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/scripts/bg.js"></script>
