--- a/autocloak.html
+++ b/autocloak.html
@@ -11,4 +11,5 @@
  embed.style.margin = '0'; 
  embed.src = url; 
  win.document.body.appendChild(embed);
+ window.open('https://google.com/', '_self')
  </script>
