--- a/games/cc/index.html
+++ b/games/cc/index.html
@@ -10,5 +10,5 @@ function encode(str) {
                     .join('')
             );
 }
-document.write('<iframe src="' + window.location.protocol + '//' + window.location.hostname + '/service/' + encode('http://orteil.dashnet.org/cookieclicker/') + '" width="100%" height="100%"></iframe>')
+document.write('<iframe src="' + window.location.protocol + '//' + window.location.hostname + '/service/' + encode('http://cclicker.pages.dev/') + '" width="100%" height="100%"></iframe>')
 </script>
