--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script>
 // window.open('/autocloak.html/', '_self')
 </script>
-<p style='color: white;'>secret</p>
+<p style='color: white; font-size: 1;'>secret</p>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/scripts/bg.js"></script>
 <iframe id="frame" src="home.html" style="width: 100%; height: 100%;"></iframe>
