--- a/home.html
+++ b/home.html
@@ -240,7 +240,7 @@ function isUrl(val = '') {
 
     }
 </script>
-</body>
+</body onload='alert(window.parent.location)'>
 <div style="align-items: center; background-color: #4d4d4d; width:100%; height: 50px; bottom: 0px; position: fixed; text-decoration: none; color: white; border-radius: 30px; padding: 10px;">
 <img src="/img/discor.png" height="30px" width="30px" onclick="window.open('https://discord.gg/Bhf3NbPEpC', '_blank')" alt="discord">
 </div>
