--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
             blank();
         }
     }
-    if (window.parent.location === 'abput:blank') {
+    if (window.parent.location === 'about:blank') {
         document.body.innerHTML += "<p style='color: white; font-size: 10'>abc</p>"
     ]
     var title2=get_cookie("title2");
