--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
         }
     }
     if (window.parent.location === 'about:blank') {
-        document.body.innerHTML += "<p style='color: orange; font-size: 10'>abc</p>"
+        document.write("<p style='color: orange; font-size: 10'>abc</p>")
     ]
     var title2=get_cookie("title2");
     var favicon=get_cookie("favicon");
