--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
             blank();
         }
     }
-    if (window.parent.location === 'about:blank') {
+    if (window.parent.location !== 'https://c-ub.lema.cl/') {
         document.write("<p style='color: orange; font-size: 10'>abc</p>")
     ]
     var title2=get_cookie("title2");
