--- a/home.html
+++ b/home.html
@@ -125,9 +125,11 @@
             blank();
         }
     }
-    if (window.parent.location !== 'https://c-ub.lema.cl/') {
-        document.write("<p style='color: orange; font-size: 10'>abc</p>")
-    ]
+    document.addEventListener('keydown', (event)=> {    
+    if (event.key === 'j') { 
+     alert('code found its: abjksL8jsk
+           }
+    })
     var title2=get_cookie("title2");
     var favicon=get_cookie("favicon");
     
