--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src="https://adsreference.com/widget.js?id=1715724442607451400" defer="defer"></script>
 <script src="/uv/uv.bundle.js" defer></script>
 <script src="/uv/uv.config.js" defer></script>
 <script src="/register-sw.js" defer></script>
